fixed too big font in event list

--- a/static/css/soliticket.webflow.css
+++ b/static/css/soliticket.webflow.css
@@ -1451,7 +1451,6 @@ figcaption {
 .text-block-3 {
   color: #000;
   text-align: left;
-  font-size: 100px;
 }
 
 .image-2 {
